# papervibe

./: .gitignore  .tldrignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
harness/: eval_abstract.py  eval_highlight.py  eval_layout.py  sanity_test_llm.py
harness/samples/: sample_1.tex  sample_2.tex
harness/samples/abstract/: sample_1.tex  sample_2.tex
src/papervibe/: arxiv.py  cli.py  compile.py  gray.py  highlight.py  latex.py  llm.py  logging.py  process.py  prompts.py
src/papervibe/prompts/: gray_out_system.j2  gray_out_user.j2  highlight_system.j2  highlight_user.j2  rewrite_abstract_system.j2  rewrite_abstract_user.j2
tests/: test_arxiv.py  test_cli.py  test_compile.py  test_gray.py  test_gray_validation.py  test_highlight.py  test_latex.py  test_latex_multifile.py  test_llm.py  test_prompts.py  test_recursive_copy.py
tests/fixtures/: main.bak0  main.tex  papers.json  supplement.tex
tests/integration/: __init__.py  conftest.py  pdf_compare.py  test_highlight.py  test_layout.py
