[project]
name = "papervibe"
version = "0.1.0"
description = "Tool to download arXiv papers, rewrite abstracts, and gray out less important sentences"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "pylatexenc>=2.10",
]

[project.scripts]
papervibe = "papervibe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
